--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,7 @@ build-iPhoneSimulator/
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
 
+# Confidential files
 credentials_template.rb
+credentials.json
+token.yaml
